# realestate_repo

./: .gitignore  METRICS_EXPLANATION.md  README.md  attraction_finder.py  attraction_scripts_README.md  batch_attraction_finder.py  example_usage.py  geocoder.py  hyperparameter_tuning.py  main.py  model_training.py  pyproject.toml
attractions/: __init__.py  attraction_finder.py  batch_attraction_finder.py
geocoding/: __init__.py  geocoder.py
