[project]
name = "realestate-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "mlflow>=3.6.0",
    "nbformat>=5.10.4",
    "nltk>=3.9.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plot>=0.6.5",
    "plotly>=6.3.1",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "shapely>=2.1.2",
    "tensorflow>=2.20.0",
    "textblob>=0.19.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "xgboost>=3.1.1",
]
